// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tester/Checkbox Defaults play-test 1`] = `
<div data-test-block="true">
  <div class="_container_1k24j_5">
    <input id="checkboxInputId-:r4:"
           class="_input_1k24j_17"
           type="checkbox"
    >
    <label for="checkboxInputId-:r4:"
           class="_label_1k24j_29"
    >
      <span class="_labelCheckbox_1k24j_40">
        <span class="_labelCheckboxCheck_1k24j_50">
        </span>
      </span>
      <span class="_labelContent_1k24j_63">
        <span class>
          Checkbox
        </span>
      </span>
    </label>
    <div id="checkboxErrorId-:r5:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/Checkbox WithAriaDescribedby play-test 1`] = `
<div data-test-block="true">
  <div class="_container_1k24j_5">
    <input id="checkboxInputId-:r18:"
           class="_input_1k24j_17"
           aria-describedby="testID"
           type="checkbox"
    >
    <label for="checkboxInputId-:r18:"
           class="_label_1k24j_29"
    >
      <span class="_labelCheckbox_1k24j_40">
        <span class="_labelCheckboxCheck_1k24j_50">
        </span>
      </span>
      <span class="_labelContent_1k24j_63">
        <span class>
          Checkbox
        </span>
      </span>
    </label>
    <div id="checkboxErrorId-:r19:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/Checkbox WithAttributes play-test 1`] = `
<div data-test-block="true">
  <div class="_container_1k24j_5  dummyClassname"
       lang="nb"
  >
    <input id="htmlid"
           class="_input_1k24j_17"
           data-testid="123ID"
           form="123form"
           type="checkbox"
    >
    <label for="htmlid"
           class="_label_1k24j_29"
    >
      <span class="_labelCheckbox_1k24j_40">
        <span class="_labelCheckboxCheck_1k24j_50">
        </span>
      </span>
      <span class="_labelContent_1k24j_63">
        <span class>
          Checkbox
        </span>
      </span>
    </label>
    <div id="checkboxErrorId-:r3:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/Checkbox WithChecked play-test 1`] = `
<div data-test-block="true">
  <div class="_container_1k24j_5">
    <input id="checkboxInputId-:ri:"
           class="_input_1k24j_17"
           type="checkbox"
           checked
    >
    <label for="checkboxInputId-:ri:"
           class="_label_1k24j_29"
    >
      <span class="_labelCheckbox_1k24j_40">
        <span class="_labelCheckboxCheck_1k24j_50">
        </span>
      </span>
      <span class="_labelContent_1k24j_63">
        <span class>
          Checkbox
        </span>
      </span>
    </label>
    <div id="checkboxErrorId-:rj:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/Checkbox WithCheckedAndRequired play-test 1`] = `
<div data-test-block="true">
  <div class="_container_1k24j_5">
    <input id="checkboxInputId-:r16:"
           class="_input_1k24j_17"
           type="checkbox"
           checked
    >
    <label for="checkboxInputId-:r16:"
           class="_label_1k24j_29"
    >
      <span class="_labelCheckbox_1k24j_40">
        <span class="_labelCheckboxCheck_1k24j_50">
        </span>
      </span>
      <span class="_labelContent_1k24j_63">
        <span class>
          Checkbox
        </span>
      </span>
    </label>
    <div id="checkboxErrorId-:r17:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/Checkbox WithCustomClassNames play-test 1`] = `
<div data-test-block="true">
  <div class="_container_1k24j_5">
    <input id="checkboxInputId-:r1i:"
           class="_input_1k24j_17"
           aria-describedby="checkboxErrorId-:r1j:"
           aria-invalid="true"
           type="checkbox"
    >
    <label for="checkboxInputId-:r1i:"
           class="_label_1k24j_29  dummyClassname"
    >
      <span class="_labelCheckbox_1k24j_40 _labelCheckbox_error_1k24j_60">
        <span class="_labelCheckboxCheck_1k24j_50">
        </span>
      </span>
      <span class="_labelContent_1k24j_63">
        <span class>
          Checkbox
        </span>
      </span>
    </label>
    <div id="checkboxErrorId-:r1j:"
         aria-live="assertive"
         aria-atomic="true"
    >
      <div class="_errorMessage_vog41_15 dummyClassname">
        <svg class="_systemIcon_dry7n_2 _systemIcon_small_dry7n_5 _errorMessageIcon_vog41_25"
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="M13 14h-2v-4h2v4Zm0 4h-2v-2h2v2ZM1 21h22L12 2 1 21Z">
          </path>
        </svg>
        <p class="_errorMessageText_vog41_29">
          Du må lese og forstå innholdet for å gå videre
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Tester/Checkbox WithDefaultChecked play-test 1`] = `
<div data-test-block="true">
  <div class="_container_1k24j_5">
    <input id="checkboxInputId-:r1c:"
           class="_input_1k24j_17"
           type="checkbox"
           checked
    >
    <label for="checkboxInputId-:r1c:"
           class="_label_1k24j_29"
    >
      <span class="_labelCheckbox_1k24j_40">
        <span class="_labelCheckboxCheck_1k24j_50">
        </span>
      </span>
      <span class="_labelContent_1k24j_63">
        <span class>
          Checkbox
        </span>
      </span>
    </label>
    <div id="checkboxErrorId-:r1d:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/Checkbox WithDescription play-test 1`] = `
<div data-test-block="true">
  <div class="_container_1k24j_5">
    <input id="checkboxInputId-:r6:"
           class="_input_1k24j_17"
           type="checkbox"
    >
    <label for="checkboxInputId-:r6:"
           class="_label_1k24j_29"
    >
      <span class="_labelCheckbox_1k24j_40">
        <span class="_labelCheckboxCheck_1k24j_50">
        </span>
      </span>
      <span class="_labelContent_1k24j_63">
        <span class>
          Checkbox&nbsp;
        </span>
        <span class="_labelContentDescription_1k24j_76">
          En beskrivelse av punktet
        </span>
      </span>
    </label>
    <div id="checkboxErrorId-:r7:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/Checkbox WithDescriptionAndDisabled smoke-test 1`] = `
<div data-test-block="true">
  <div class="_container_1k24j_5">
    <input id="checkboxInputId-:ra:"
           class="_input_1k24j_17"
           disabled
           type="checkbox"
    >
    <label for="checkboxInputId-:ra:"
           class="_label_1k24j_29"
    >
      <span class="_labelCheckbox_1k24j_40">
        <span class="_labelCheckboxCheck_1k24j_50">
        </span>
      </span>
      <span class="_labelContent_1k24j_63">
        <span class>
          Checkbox&nbsp;
        </span>
        <span class="_labelContentDescription_1k24j_76">
          En beskrivelse av punktet
        </span>
      </span>
    </label>
    <div id="checkboxErrorId-:rb:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/Checkbox WithDescriptionAndLongText smoke-test 1`] = `
<div data-test-block="true">
  <div class="_container_1k24j_5">
    <input id="checkboxInputId-:r8:"
           class="_input_1k24j_17"
           type="checkbox"
    >
    <label for="checkboxInputId-:r8:"
           class="_label_1k24j_29"
    >
      <span class="_labelCheckbox_1k24j_40">
        <span class="_labelCheckboxCheck_1k24j_50">
        </span>
      </span>
      <span class="_labelContent_1k24j_63">
        <span class>
          Får ekstra lang reisevei til jobb på grunn av levering til barnehage eller skolefritidsordning eller annen fritidsordning&nbsp;
        </span>
        <span class="_labelContentDescription_1k24j_76">
          Litt rart å ha en beskrivende tekst rett under en lang tekst, men sånn har det blitt
        </span>
      </span>
    </label>
    <div id="checkboxErrorId-:r9:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/Checkbox WithDisabled play-test 1`] = `
<div data-test-block="true">
  <div class="_container_1k24j_5">
    <input id="checkboxInputId-:rk:"
           class="_input_1k24j_17"
           disabled
           type="checkbox"
    >
    <label for="checkboxInputId-:rk:"
           class="_label_1k24j_29"
    >
      <span class="_labelCheckbox_1k24j_40">
        <span class="_labelCheckboxCheck_1k24j_50">
        </span>
      </span>
      <span class="_labelContent_1k24j_63">
        <span class>
          Checkbox
        </span>
      </span>
    </label>
    <div id="checkboxErrorId-:rl:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/Checkbox WithDisabledAndChecked play-test 1`] = `
<div data-test-block="true">
  <div class="_container_1k24j_5">
    <input id="checkboxInputId-:rm:"
           class="_input_1k24j_17"
           disabled
           type="checkbox"
           checked
    >
    <label for="checkboxInputId-:rm:"
           class="_label_1k24j_29"
    >
      <span class="_labelCheckbox_1k24j_40">
        <span class="_labelCheckboxCheck_1k24j_50">
        </span>
      </span>
      <span class="_labelContent_1k24j_63">
        <span class>
          Checkbox
        </span>
      </span>
    </label>
    <div id="checkboxErrorId-:rn:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/Checkbox WithDisabledAndRequired play-test 1`] = `
<div data-test-block="true">
  <div class="_container_1k24j_5">
    <input id="checkboxInputId-:r11:"
           class="_input_1k24j_17"
           disabled
           required
           type="checkbox"
    >
    <label for="checkboxInputId-:r11:"
           class="_label_1k24j_29"
    >
      <span class="_labelCheckbox_1k24j_40">
        <span class="_labelCheckboxCheck_1k24j_50">
        </span>
      </span>
      <span class="_labelContent_1k24j_63">
        <span class="_labelContent_required_1k24j_71">
          Checkbox
        </span>
      </span>
    </label>
    <div id="checkboxErrorId-:r12:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/Checkbox WithError play-test 1`] = `
<div data-test-block="true">
  <div class="_container_1k24j_5">
    <input id="checkboxInputId-:ru:"
           class="_input_1k24j_17"
           aria-describedby="checkboxErrorId-:rv:"
           aria-invalid="true"
           type="checkbox"
    >
    <label for="checkboxInputId-:ru:"
           class="_label_1k24j_29"
    >
      <span class="_labelCheckbox_1k24j_40 _labelCheckbox_error_1k24j_60">
        <span class="_labelCheckboxCheck_1k24j_50">
        </span>
      </span>
      <span class="_labelContent_1k24j_63">
        <span class>
          Checkbox
        </span>
      </span>
    </label>
    <div id="checkboxErrorId-:rv:"
         aria-live="assertive"
         aria-atomic="true"
    >
      <div class="_errorMessage_vog41_15">
        <svg class="_systemIcon_dry7n_2 _systemIcon_small_dry7n_5 _errorMessageIcon_vog41_25"
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="M13 14h-2v-4h2v4Zm0 4h-2v-2h2v2ZM1 21h22L12 2 1 21Z">
          </path>
        </svg>
        <p class="_errorMessageText_vog41_29">
          Du må lese og forstå innholdet for å gå videre
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Tester/Checkbox WithErrorAndRequired play-test 1`] = `
<div data-test-block="true">
  <div class="_container_1k24j_5">
    <input id="checkboxInputId-:r13:"
           class="_input_1k24j_17"
           required
           aria-describedby="checkboxErrorId-:r14:"
           aria-invalid="true"
           type="checkbox"
    >
    <label for="checkboxInputId-:r13:"
           class="_label_1k24j_29 _label_error_1k24j_36"
    >
      <span class="_labelCheckbox_1k24j_40 _labelCheckbox_error_1k24j_60">
        <span class="_labelCheckboxCheck_1k24j_50">
        </span>
      </span>
      <span class="_labelContent_1k24j_63">
        <span class="_labelContent_required_1k24j_71">
          Checkbox
        </span>
      </span>
    </label>
    <div id="checkboxErrorId-:r14:"
         aria-live="assertive"
         aria-atomic="true"
    >
      <div class="_errorMessage_vog41_15">
        <svg class="_systemIcon_dry7n_2 _systemIcon_small_dry7n_5 _errorMessageIcon_vog41_25"
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="M13 14h-2v-4h2v4Zm0 4h-2v-2h2v2ZM1 21h22L12 2 1 21Z">
          </path>
        </svg>
        <p class="_errorMessageText_vog41_29">
          Feilmelding
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Tester/Checkbox WithEventHandlers play-test 1`] = `
<div data-test-block="true">
  <div class="_container_1k24j_5">
    <input id="checkboxInputId-:r1g:"
           class="_input_1k24j_17"
           type="checkbox"
    >
    <label for="checkboxInputId-:r1g:"
           class="_label_1k24j_29"
    >
      <span class="_labelCheckbox_1k24j_40">
        <span class="_labelCheckboxCheck_1k24j_50">
        </span>
      </span>
      <span class="_labelContent_1k24j_63">
        <span class>
          Checkbox har mistet fokus
        </span>
      </span>
    </label>
    <div id="checkboxErrorId-:r1h:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/Checkbox WithHideLabel play-test 1`] = `
<div data-test-block="true">
  <div class="_container_1k24j_5">
    <input id="checkboxInputId-:rg:"
           class="_input_1k24j_17"
           type="checkbox"
    >
    <label for="checkboxInputId-:rg:"
           class="_label_1k24j_29"
    >
      <span class="_labelCheckbox_1k24j_40">
        <span class="_labelCheckboxCheck_1k24j_50">
        </span>
      </span>
      <span class="_labelContent_1k24j_63 _srOnly_1k24j_132">
        <span class>
          Checkbox
        </span>
      </span>
    </label>
    <div id="checkboxErrorId-:rh:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/Checkbox WithLongText smoke-test 1`] = `
<div data-test-block="true">
  <div class="_container_1k24j_5">
    <input id="checkboxInputId-:rc:"
           class="_input_1k24j_17"
           type="checkbox"
    >
    <label for="checkboxInputId-:rc:"
           class="_label_1k24j_29"
    >
      <span class="_labelCheckbox_1k24j_40">
        <span class="_labelCheckboxCheck_1k24j_50">
        </span>
      </span>
      <span class="_labelContent_1k24j_63">
        <span class>
          Får ekstra lang reisevei til jobb på grunn av levering til barnehage eller skolefritidsordning eller annen fritidsordning
        </span>
      </span>
    </label>
    <div id="checkboxErrorId-:rd:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/Checkbox WithLongTextAndBreaking smoke-test 1`] = `
<div data-test-block="true">
  <div class="_container_1k24j_5">
    <input id="checkboxInputId-:re:"
           class="_input_1k24j_17"
           type="checkbox"
    >
    <label for="checkboxInputId-:re:"
           class="_label_1k24j_29"
    >
      <span class="_labelCheckbox_1k24j_40">
        <span class="_labelCheckboxCheck_1k24j_50">
        </span>
      </span>
      <span class="_labelContent_1k24j_63">
        <span class>
          Fårekstrareiseveitiljobbpågrunnavleveringtilbarnehageellerskolefritidsordning
        </span>
      </span>
    </label>
    <div id="checkboxErrorId-:rf:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/Checkbox WithName play-test 1`] = `
<div data-test-block="true">
  <div class="_container_1k24j_5">
    <input id="checkboxInputId-:r1e:"
           class="_input_1k24j_17"
           type="checkbox"
           name="test_name_checkbox"
    >
    <label for="checkboxInputId-:r1e:"
           class="_label_1k24j_29"
    >
      <span class="_labelCheckbox_1k24j_40">
        <span class="_labelCheckboxCheck_1k24j_50">
        </span>
      </span>
      <span class="_labelContent_1k24j_63">
        <span class>
          Checkbox
        </span>
      </span>
    </label>
    <div id="checkboxErrorId-:r1f:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/Checkbox WithRef play-test 1`] = `
<div data-test-block="true">
  <div class="_container_1k24j_5">
    <input id="checkboxInputId-:r0:"
           class="_input_1k24j_17"
           type="checkbox"
           name="dummyNameForwardedFromRef"
    >
    <label for="checkboxInputId-:r0:"
           class="_label_1k24j_29"
    >
      <span class="_labelCheckbox_1k24j_40">
        <span class="_labelCheckboxCheck_1k24j_50">
        </span>
      </span>
      <span class="_labelContent_1k24j_63">
        <span class>
          Checkbox
        </span>
      </span>
    </label>
    <div id="checkboxErrorId-:r1:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/Checkbox WithRequired play-test 1`] = `
<div data-test-block="true">
  <div class="_container_1k24j_5">
    <input id="checkboxInputId-:ro:"
           class="_input_1k24j_17"
           required
           type="checkbox"
    >
    <label for="checkboxInputId-:ro:"
           class="_label_1k24j_29"
    >
      <span class="_labelCheckbox_1k24j_40">
        <span class="_labelCheckboxCheck_1k24j_50">
        </span>
      </span>
      <span class="_labelContent_1k24j_63">
        <span class>
          Checkbox
        </span>
      </span>
    </label>
    <div id="checkboxErrorId-:rp:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/Checkbox WithRequiredAndChecked play-test 1`] = `
<div data-test-block="true">
  <div class="_container_1k24j_5">
    <input id="checkboxInputId-:rs:"
           class="_input_1k24j_17"
           type="checkbox"
           checked
    >
    <label for="checkboxInputId-:rs:"
           class="_label_1k24j_29"
    >
      <span class="_labelCheckbox_1k24j_40">
        <span class="_labelCheckboxCheck_1k24j_50">
        </span>
      </span>
      <span class="_labelContent_1k24j_63">
        <span class>
          Checkbox
        </span>
      </span>
    </label>
    <div id="checkboxErrorId-:rt:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/Checkbox WithRequiredAndMark play-test 1`] = `
<div data-test-block="true">
  <div class="_container_1k24j_5">
    <input id="checkboxInputId-:rq:"
           class="_input_1k24j_17"
           required
           type="checkbox"
    >
    <label for="checkboxInputId-:rq:"
           class="_label_1k24j_29"
    >
      <span class="_labelCheckbox_1k24j_40">
        <span class="_labelCheckboxCheck_1k24j_50">
        </span>
      </span>
      <span class="_labelContent_1k24j_63">
        <span class="_labelContent_required_1k24j_71">
          Checkbox
        </span>
      </span>
    </label>
    <div id="checkboxErrorId-:rr:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/Checkbox WithValue play-test 1`] = `
<div data-test-block="true">
  <div class="_container_1k24j_5">
    <input id="checkboxInputId-:r1a:"
           class="_input_1k24j_17"
           type="checkbox"
           value="test_value_checkbox"
    >
    <label for="checkboxInputId-:r1a:"
           class="_label_1k24j_29"
    >
      <span class="_labelCheckbox_1k24j_40">
        <span class="_labelCheckboxCheck_1k24j_50">
        </span>
      </span>
      <span class="_labelContent_1k24j_63">
        <span class>
          Checkbox
        </span>
      </span>
    </label>
    <div id="checkboxErrorId-:r1b:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;
